<resources>
    <string name="app_name">天宫智能运维</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="main_frame">监控</string>
    <string name="alarm">告警</string>
    <string name="console">控制台</string>
    <string name="mine">我</string>
    <string name="deploy_condition">部署情况</string>
    <string name="mainframe_condition">主机情况</string>
    <string name="MQ">MQ</string>
    <string name="DRDS">DRDS</string>
    <string name="KVStore">KVStore</string>

    <string name="chart_title">主题：</string>

    <!--Login-->
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="login">登 录</string>

    <string name="environment_flag">环境标志</string>
    <string name="category">类别</string>

    <string name="app_class_name">应用大类</string>
    <string name="application_name">应用名称</string>
    <string name="mainframe_ip">部署机器</string>
    <string name="server_type">机器类别</string>

    <string name="deploy_cate">类别</string>
    <string name="app_belongs">应用归属</string>
    <string name="app_categroy">应用分类</string>
    <string name="app_backup">应用信息备注</string>

    <string name="show_chart">图形</string>
    <string name="monitor_target">监控对象:</string>
    <string name="monitor_item">监控项:</string>
    <string name="monitor_time">最新检查记录:</string>
    <string name="monitor_data">最新数据:</string>

    <!--我的-->
    <string name="account">账户与安全</string>
    <string name="group">我的运维小组</string>
    <string name="report">晨检报告</string>
    <string name="guide">故障处理手册</string>
    <string name="clear_buffer">清除缓存</string>
    <string name="about">关于</string>
    <string name="exit">退出登录</string>
    <string name="setting">设置</string>
    <string name="project_group">公共平台</string>
    <string name="company">中国联通软件研究院济南分院</string>

    <!--数据归集-->
    <string name="choose_ip">选择IP:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
