<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.chinaunicom.monitor.mainframe.MainframeListActivity">

    <include layout="@layout/layout_standard_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="@dimen/margin_16"
        android:background="@color/colorGray">
        <TextView
            style="@style/OnlyTextActivityTitleBarStyle"
            android:text="@string/app_class_name"/>
        <TextView
            style="@style/OnlyTextActivityTitleBarStyle"
            android:text="@string/application_name"/>

        <TextView
            style="@style/OnlyTextActivityTitleBarStyle"
            android:text="@string/mainframe_ip"/>

        <TextView
            style="@style/OnlyTextActivityTitleBarStyle"
            android:text="@string/server_type"/>

    </LinearLayout>

    <ListView
        android:id="@+id/mainframeList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin_8"/>

</LinearLayout>
